--- a/index.qmd
+++ b/index.qmd
@@ -1,7 +1,7 @@
-# Preface {.unnumbered}
+# Preface to _A Little Book of Bioinformatics_ {.unnumbered}
 
-This is a Quarto book, generated using the `sipbs-compbiol-book-template` GitHub template.
+Welcome to A Little Book of Bioinformatics. This is an online book, under continual development, which I am building as and when topics come to mind or prominence.
 
-The Preface page is intended as a frontispiece with brief introductory information about the book and, maybe, its authors.
+My goal is that this online book will come to be a fairly transparent and honest reference for students in bioinformatics, and maybe for some researchers, too.
 
-To learn more about Quarto books visit <https://quarto.org/docs/books>.
+I would be very grateful for feedback [by email]({{< var admin.email >}}) or through the [GitHub repository Issues page]({{< var github.issues >}})
